# Persosim

./: .gitignore  CITATION.cff  LICENSE  README.md  README_zh.md  pyproject.toml
configs/: api.example.md
data/: 20user_lifeline.json  README.md  persona_instances_5x20.jsonl
scripts/: build_public_20user_projection.py  run_lifelong.py  run_model_axis.py  validate_data.py  validate_persona_instances.py
src/: __init__.py  client.py  config.py  dataset.py  memory.py  runner.py
src/adapters/: __init__.py  mem0.py  naive_rag.py
tests/: test_public_runtime.py
